[project]
name = "aax-to-m4a"
version = "0.1.0"
description = "Convert a bunch of aax files to m4a"
license = { file = "LICENSE" }
authors = [
    {name = "Ian Laird",email = "irlaird@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "snowcrypt (>=0.1.3.post0,<0.2.0)"
]

[tool.poetry]
packages = [{include = "aax_to_m4a", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
